# moc3

./: Cargo.toml  README.md
src/: canvas.rs  error.rs  header.rs  lib.rs  prelude.rs
src/header/: magic.rs  version.rs
src/reader/: mod.rs  private.rs  public.rs  traits.rs
src/types/: bit_field.rs  bool32.rs  id.rs  mod.rs  offset.rs  padding.rs
src/v3_00_00/: count_info.rs  mod.rs  model.rs  offsets.rs
src/v3_00_00/model/: art_mesh.rs  art_mesh_keyform.rs  deformer.rs  draw_order_group.rs  draw_order_group_object.rs  drawable_mask.rs  glue.rs  glue_info.rs  glue_keyform.rs  key.rs  keyform_binding.rs  keyform_position.rs  parameter.rs  parameter_binding.rs  parameter_binding_indices.rs  part.rs  part_keyform.rs  position_indices.rs  rotation_deformer.rs  rotation_deformer_keyform.rs  uv.rs  warp_deformer.rs  warp_deformer_keyform.rs
src/v3_00_00/offsets/: art_mesh.rs  art_mesh_keyform.rs  deformer.rs  draw_order_group.rs  draw_order_group_object.rs  drawable_mask.rs  glue.rs  glue_info.rs  glue_keyform.rs  key.rs  keyform_binding.rs  keyform_position.rs  parameter.rs  parameter_binding.rs  parameter_binding_indices.rs  part.rs  part_keyform.rs  position_indices.rs  rotation_deformer.rs  rotation_deformer_keyform.rs  uv.rs  warp_deformer.rs  warp_deformer_keyform.rs
src/v3_03_00/: mod.rs  model.rs  offsets.rs
src/v3_03_00/model/: warp_deformer.rs
src/v3_03_00/offsets/: warp_deformer.rs
src/v4_00_00/: mod.rs
src/v4_02_00/: count_info.rs  mod.rs  model.rs  offsets.rs
src/v5_00_00/: count_info.rs  mod.rs  model.rs  offsets.rs
(+29 files in other folders)
